--- a/src/global.scss
+++ b/src/global.scss
@@ -698,6 +698,9 @@ input:checked + .slider:before {
                     padding: 20px 0;
                     font-size: .9em;
                 }
+                .chosen {
+                    border: 3px solid red;
+                }
             }
         }
     }
