--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -111,7 +111,7 @@
                     <div class="quota table">
                         <div class="row">
                             <div class="cell">
-                                27<small>%</small>
+                                {{immobileLista.quota}}<small>%</small>
                             </div>
                         </div>
                     </div>
@@ -121,7 +121,10 @@
         <div class="footer table">
             <div class="row">
                 <div class="cell">
-                    <button class="button add" (click)="goToWizardNew()">immobile</button>
+                    <button *ngIf="this.sessionService.getCliente() &&
+                    this.sessionService.getCliente().cliente_id &&
+                    this.sessionService.getCliente().cliente_id != 0" class="button add"
+                        (click)="goToWizardNew()">immobile</button>
                 </div>
             </div>
         </div>
