--- a/src/app/pages/wizard/wizard.page.html
+++ b/src/app/pages/wizard/wizard.page.html
@@ -147,7 +147,7 @@
                                             <a [routerLink]="" (click)="scegliDestinazione(false, false, false)"
                                                 [ngClass]="{'button': true, 'choice': true, 'full-width': true, 'chosen': (!primacasa && !residente && !affittata)}">Non
                                                 residente</a>
-                                            <a [routerLink]="" (click)="scegliDestinazione(false, true, false)"
+                                            <a [routerLink]="" (click)="scegliDestinazione(false, true, true)"
                                                 [ngClass]="{'button': true, 'choice': true, 'full-width': true, 'chosen': (!primacasa && affittata)}">Affittata</a>
                                         </div>
                                     </div>
@@ -194,79 +194,85 @@
                                         <div class="form-item ">
                                             <label>Mutuo</label><br>
                                             <label class="switch">
-                                                <input type="checkbox" [(ngModel)]="immobile.mutuo">
+                                                <input type="checkbox" [(ngModel)]="immobile.mutuo"
+                                                    (change)="changeMutuo(immobile.mutuo)">
                                                 <span class="slider round"></span>
                                             </label>
                                         </div>
-                                        <div class="form-item">
-                                            <label>Detrazione fiscale interessi</label><br>
-                                            <label class="switch">
-                                                <input type="checkbox"
-                                                    [(ngModel)]="immobile.mutuo_dettaglio.detrazione_interessi"
-                                                    [disabled]="!immobile.mutuo">
-                                                <span class="slider round"></span>
-                                            </label>
-                                        </div>
-                                        <div class="form-item ">
-                                            <label>Tasso</label><br>
-                                            <label class="container">Fisso
-                                                <input type="radio"
-                                                    [checked]="immobile.mutuo_dettaglio.tipo_tasso == 'F'" value="F"
-                                                    id="F" name="radioTasso" (change)="setTasso('F')"
-                                                    [disabled]="!immobile.mutuo">
-                                                <span class=" checkmark"></span>
-                                            </label><br>
-                                            <label class="container">Variabile
-                                                <input type="radio"
-                                                    [checked]="immobile.mutuo_dettaglio.tipo_tasso == 'V'" value="F"
-                                                    id="F" name="radioTasso" (change)="setTasso('V')"
-                                                    [disabled]="!immobile.mutuo">
-                                                <span class="checkmark"></span>
-                                            </label>
+                                        <div *ngIf="immobile.mutuo">
+                                            <div class="form-item">
+                                                <label>Detrazione fiscale interessi</label><br>
+                                                <label class="switch">
+                                                    <input type="checkbox"
+                                                        [(ngModel)]="immobile.mutuo_dettaglio.detrazione_interessi"
+                                                        [disabled]="!immobile.mutuo">
+                                                    <span class="slider round"></span>
+                                                </label>
+                                            </div>
+                                            <div class="form-item ">
+                                                <label>Tasso</label><br>
+                                                <label class="container">Fisso
+                                                    <input type="radio"
+                                                        [checked]="immobile.mutuo_dettaglio.tipo_tasso == 'F'" value="F"
+                                                        id="F" name="radioTasso" (change)="setTasso('F')"
+                                                        [disabled]="!immobile.mutuo">
+                                                    <span class=" checkmark"></span>
+                                                </label><br>
+                                                <label class="container">Variabile
+                                                    <input type="radio"
+                                                        [checked]="immobile.mutuo_dettaglio.tipo_tasso == 'V'" value="F"
+                                                        id="F" name="radioTasso" (change)="setTasso('V')"
+                                                        [disabled]="!immobile.mutuo">
+                                                    <span class="checkmark"></span>
+                                                </label>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="item-list form">
-                                        <div class="form-item left">
-                                            <label>Euribor</label>
-                                            <div class="type">
-                                                <select class="select-css" (change)="selezionaEuribor($event.target)">
-                                                    <option *ngFor="let eur of euribor" value="{{eur.codice}}"
-                                                        selected="{{eur.codice === immobile.mutuo_dettaglio.euribor_id ? 'selected' : ''}}">
-                                                        {{eur.descrizione}}
-                                                    </option>
-                                                </select>
+                                        <div *ngIf="immobile.mutuo">
+                                            <div class="form-item left">
+                                                <label>Euribor</label>
+                                                <div class="type">
+                                                    <select class="select-css"
+                                                        (change)="selezionaEuribor($event.target)">
+                                                        <option *ngFor="let eur of euribor" value="{{eur.codice}}"
+                                                            selected="{{eur.codice === immobile.mutuo_dettaglio.euribor_id ? 'selected' : ''}}">
+                                                            {{eur.descrizione}}
+                                                        </option>
+                                                    </select>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div class="form-item right">
-                                            <label>Spread</label>
-                                            <div class="type">
-                                                <input type="text" placeholder="" digitsonly numericType="decimal"
-                                                    [(ngModel)]="immobile.mutuo_dettaglio.spread"
-                                                    [disabled]="!immobile.mutuo"><span>%</span>
+                                            <div class="form-item right">
+                                                <label>Spread</label>
+                                                <div class="type">
+                                                    <input type="text" placeholder="" digitsonly numericType="decimal"
+                                                        [(ngModel)]="immobile.mutuo_dettaglio.spread"
+                                                        [disabled]="!immobile.mutuo"><span>%</span>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div class="form-item single">
-                                            <label>Durata</label>
-                                            <div class="type">
-                                                <input type="text" digitsonly numericType="number" maxlength="4"
-                                                    placeholder="" value="24"
-                                                    [(ngModel)]="immobile.mutuo_dettaglio.durata"
-                                                    [disabled]="!immobile.mutuo"><span>mesi</span>
+                                            <div class="form-item single">
+                                                <label>Durata</label>
+                                                <div class="type">
+                                                    <input type="text" digitsonly numericType="number" maxlength="4"
+                                                        placeholder="" value="24"
+                                                        [(ngModel)]="immobile.mutuo_dettaglio.durata"
+                                                        [disabled]="!immobile.mutuo"><span>mesi</span>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div class="form-item single">
-                                            <label>Data inizio</label>
-                                            <ra-date-picker [inputDate]="dataInizioMutuo"></ra-date-picker>
-                                        </div>
-                                        <div class="form-item single">
-                                            <label>Importo iniziale</label>
-                                            <div class="type">
-                                                <input type="text" placeholder="" value="24" digitsonly
-                                                    numericType="decimal"
-                                                    [(ngModel)]="immobile.mutuo_dettaglio.importo_iniziale"
-                                                    [disabled]="!immobile.mutuo"><span>&euro;</span>
+                                            <div class="form-item single">
+                                                <label>Data inizio</label>
+                                                <ra-date-picker [inputDate]="dataInizioMutuo"></ra-date-picker>
+                                            </div>
+                                            <div class="form-item single">
+                                                <label>Importo iniziale</label>
+                                                <div class="type">
+                                                    <input type="text" placeholder="" value="24" digitsonly
+                                                        numericType="decimal"
+                                                        [(ngModel)]="immobile.mutuo_dettaglio.importo_iniziale"
+                                                        [disabled]="!immobile.mutuo"><span>&euro;</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -319,7 +325,7 @@
                                             </select>
                                         </div>
                                         <div class="form-item single">
-                                            <label>Durata prima scadenza</label>
+                                            <label>Durata Contratto</label>
                                             <div class="type">
                                                 <input type="text" placeholder="" digitsonly numericType="number"
                                                     [(ngModel)]="immobile.affitto_dettaglio.prima_scadenza_anni"><span>anni</span>
@@ -345,12 +351,13 @@
                                         <div class="form-item ">
                                             <label>Spese condominiali comprese</label><br>
                                             <label class="switch">
-                                                <input type="checkbox">
-                                                <span class="slider round"
-                                                    [(ngModel)]="immobile.affitto_dettaglio.spese_condominiali"></span>
+                                                <input type="checkbox"
+                                                    [(ngModel)]="immobile.affitto_dettaglio.spese_condominiali">
+                                                <span class="slider round"></span>
                                             </label>
                                         </div>
-                                        <div class="form-item single">
+                                        <div class="form-item single"
+                                            *ngIf="immobile.affitto_dettaglio.spese_condominiali">
                                             <label>Importo annuo</label>
                                             <div class="type">
                                                 <input type="text" placeholder="" digitsonly numericType="decimal"
@@ -365,7 +372,7 @@
                                                 <span class="slider round"></span>
                                             </label>
                                         </div>
-                                        <div class="form-item single">
+                                        <div class="form-item single" *ngIf="immobile.affitto_dettaglio.cedolare_secca">
                                             <label>Aliquota</label>
                                             <div class="type">
                                                 <input type="text" placeholder="" digitsonly numericType="number"
@@ -488,7 +495,8 @@
                             <div class="scheda-table single-column">
                                 <div class="item">
                                     <div class="item-list ">
-                                        <button class="button light back left" (click)="goToDati()">indietro</button>
+                                        <button class="button light back left"
+                                            (click)="goToDatiBack()">indietro</button>
                                         <button class="button forward right"
                                             (click)="goToCointestatari()">avanti</button>
                                     </div>
