fix allineamento icone header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,10 @@
             <img src="/assets/img/readvice-logo@2x.png" class="title">
         </div>
         <div class="tools">
-            <button class="hints tasks"><span>10</span></button>
-            <button class="hints alerts"><span>10</span></button>
-            <button class="user" (click)="goToProfiloUtente()">{{getUtenteEmail()}}</button>
-            <button class="hints logout" (click)="logout()"></button>
+            <div class="hints tasks"><span>10</span></div>
+            <div class="hints alerts"><span>10</span></div>
+            <div class="user" (click)="goToProfiloUtente()">{{getUtenteEmail()}}</div>
+            <div class="hints logout" (click)="logout()"></div>
         </div>
     </div>
     <!-- FINE HEADER COMUNE -->
