--- a/src/global.scss
+++ b/src/global.scss
@@ -529,6 +529,7 @@ input:checked + .slider:before {
     position: relative;
     margin: 0 10px;
     top: 6px;
+    cursor: pointer;
     span {
         display: block;
         position: absolute;
@@ -567,7 +568,7 @@ input:checked + .slider:before {
  }
 .user {
      display: inline-block;
-    //width: 40px;
+    cursor: pointer;
     height: 40px;
     background-image: url('/assets/img/user-thumb@2x.png');
     background-repeat: no-repeat;
@@ -1788,7 +1789,7 @@ input:checked + .slider:before {
             font-size: .8em;
             padding-left: 20px;
             background: url('/assets/img/icon-position@2x.png') no-repeat left top;
-
+            margin-right: 60px;
         }
         .tipologia, .quota {
             position: absolute;
