--- a/src/app/pages/report-generale/report-generale.page.html
+++ b/src/app/pages/report-generale/report-generale.page.html
@@ -46,7 +46,8 @@
                             <div
                                 [ngClass]="{'table-cell': true, 'negative': getTotaleAttiviImmobile(imm) < 0, 'positive': getTotaleAttiviImmobile(imm) > 0}">
                                 {{getTotaleAttiviImmobile(imm)| k_money}} &euro; <img
-                                    src="/assets/img/icon-view-mini@2x.png" (click)="caricaAttiviImmobile(imm)"></div>
+                                    *ngIf="getTotaleAttiviImmobile(imm) > 0" src="/assets/img/icon-view-mini@2x.png"
+                                    (click)="caricaAttiviImmobile(imm)"></div>
                             <div
                                 [ngClass]="{'table-cell': true, 'negative': getTotaleImmobile(imm) < 0, 'positive': getTotaleImmobile(imm) > 0}">
                                 {{getTotaleImmobile(imm)| k_money}} &euro;</div>
@@ -88,7 +89,8 @@
             <ul>
                 <li class="report-item" *ngFor="let oggetto of oggettiColonnaDestra">
                     <span class="item">{{oggetto.descrizione}}</span>
-                    <span class="item-value">{{oggetto.valore}}</span>
+                    <span class="item-value" *ngIf="!attiviSelezionato">{{oggetto.valore | k_money}} &euro;</span>
+                    <span class="item-value" *ngIf="attiviSelezionato">{{oggetto.valore}}</span>
                 </li>
             </ul>
         </div>
