--- a/src/app/pages/wizard/wizard.page.html
+++ b/src/app/pages/wizard/wizard.page.html
@@ -94,7 +94,7 @@
                             <div class="scheda-table single-column">
                                 <div class="item">
                                     <div class="item-list ">
-                                        <button class="button forward right"
+                                        <button class="button forward right" [disabled]="!avantiIndirizzoImmobile()"
                                             (click)="goToDestinazione()">avanti</button>
                                     </div>
                                 </div>
