--- a/src/app/pages/profilo-utente/profilo-utente.page.html
+++ b/src/app/pages/profilo-utente/profilo-utente.page.html
@@ -46,16 +46,16 @@
                                     </div>
                                     <div class="form-item left" style="width: 33%;">
                                         <label>Ripeto password nuova</label>
-                                        <input type="password" class="alert"
+                                        <input type="password" [ngClass]="{'alert': isAlertStatus()}"
                                             [(ngModel)]="cambioPasswordRequest.ripeti_password" maxlength="20">
                                     </div>
                                 </div>
                                 <div class="item-list form auto-height" style="margin-bottom: 0;"
-                                    *ngIf="cambioPasswordRequest.nuova_password != cambioPasswordRequest.ripeti_password">
+                                    *ngIf="arePasswordDifferent()">
                                     <div class="form-item alert">Le password non coincidono</div>
                                 </div>
                                 <div class="item-list form auto-height" style="margin-bottom: 0;"
-                                    *ngIf="cambioPasswordRequest.vecchia_password == cambioPasswordRequest.nuova_password">
+                                    *ngIf="isOldPassworEqualToNew()">
                                     <div class="form-item alert">La nuova password deve essere diversa dalla vecchia
                                     </div>
                                 </div>
