--- a/src/global.scss
+++ b/src/global.scss
@@ -370,9 +370,6 @@ input:checked + .slider:before {
   background: white;
 }
 
-
-
-
 .button {
     font-family: Arial, sans-serif;
     background: $highlight-text-color;
@@ -450,6 +447,9 @@ input:checked + .slider:before {
         padding-left: 20px;
         background-position: center;
     }
+}
+.button:disabled {
+    background-color: $grey-default;
 }
 .overflow-container {
     overflow: auto;
