--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -38,7 +38,8 @@
                                         class="button view only-icon"
                                         (click)="openModal('custom-modal-1')">&nbsp;</button></h3>
                                 <ul class="item-list half-height">
-                                    <li><span>Book Value</span><span>{{immobile.valore_acquisto}}</span></li>
+                                    <li><span>Book Value</span><span
+                                            class="right-span">{{immobile.valore_acquisto}}</span></li>
                                     <li><span>Valore catastale</span><span>{{immobile.valore_acquisto}}</span></li>
                                     <li><span>Valore commerciale</span><span>-</span></li>
                                     <li><span>Rendita</span><span>{{immobile.dati_catastali ? immobile.dati_catastali.rendita : '-'}}</span>
