--- a/src/app/pages/wizard/wizard.page.html
+++ b/src/app/pages/wizard/wizard.page.html
@@ -82,10 +82,10 @@
                                                 [(ngModel)]="ddlComuneSelected">
                                             </ngx-select-dropdown> -->
                                         </div>
-                                        <div class="form-item left " style="width: 15%;">
+                                        <!-- <div class="form-item left " style="width: 15%;">
                                             <label style="width: 100%">&nbsp;</label>
                                             <button (click)="caricaOmi()" class="button no-icon">cerca</button>
-                                        </div>
+                                        </div> -->
                                         <div class="form-item left " style="width: 35%;">
                                             <label>OMI</label>
                                             <select class="select-css" (change)="selezionaOmi($event.target)">
