--- a/src/app/pages/nuovo-cliente/nuovo-cliente.page.html
+++ b/src/app/pages/nuovo-cliente/nuovo-cliente.page.html
@@ -35,27 +35,31 @@
                         <div class="scheda-table">
                             <div class="item">
                                 <div class="item-list form auto-height">
-                                    <div class="form-item left" style="width: 50%;" *ngIf="!nuovo">
+                                    <div class="form-item left" style="width: 50%;" *ngIf="!nuovo && !abilitato">
                                         <label>Abilita app</label>
                                         <!-- <button class="button" (click)="abilitaApp()">Abilita app</button> -->
                                     </div>
-                                    <div class="form-item left" style="width: 50%;" *ngIf="!nuovo">
+                                    <div class="form-item left" style="width: 50%;" *ngIf="!nuovo && !abilitato">
                                         <label>Password abilitazione</label>
                                         <input type="text" placeholder="nome" [(ngModel)]="passwordAbilitazione">
                                     </div>
-                                    <div class="form-item left" style="width: 50%;" *ngIf="nuovo">
+                                    <div class="form-item left" style="width: 50%;"
+                                        *ngIf="nuovo || (!nuovo && abilitato)">
                                         <label>Nome</label>
                                         <input type="text" placeholder="nome" [(ngModel)]="nuovoCliente.nome">
                                     </div>
-                                    <div class="form-item left" style="width: 50%;" *ngIf="nuovo">
+                                    <div class="form-item left" style="width: 50%;"
+                                        *ngIf="nuovo || (!nuovo && abilitato)">
                                         <label>Cognome</label>
                                         <input type="text" placeholder="cognome" [(ngModel)]="nuovoCliente.cognome">
                                     </div>
-                                    <div class="form-item left" style="width: 50%;" *ngIf="nuovo">
+                                    <div class="form-item left" style="width: 50%;"
+                                        *ngIf="nuovo || (!nuovo && abilitato)">
                                         <label>Codice Fiscale</label>
                                         <input type="text" placeholder="CF" [(ngModel)]="nuovoCliente.codice_fiscale">
                                     </div>
-                                    <div class="form-item left" style="width: 50%;" *ngIf="nuovo">
+                                    <div class="form-item left" style="width: 50%;"
+                                        *ngIf="nuovo || (!nuovo && abilitato)">
                                         <label>Email</label>
                                         <input type="text" placeholder="Email" [(ngModel)]="nuovoCliente.email">
                                     </div>
@@ -65,10 +69,12 @@
                         <div class="scheda-table single-column">
                             <div class="item">
                                 <div class="item-list ">
-                                    <button class="button forward right" (click)="saveNewCliente()" *ngIf="nuovo">Invia
+                                    <button class="button forward right" (click)="saveNewCliente()"
+                                        *ngIf="nuovo || (!nuovo && abilitato)">Invia
                                         la
                                         richiesta</button>
-                                    <button class="button forward right" (click)="abilitaApp()" *ngIf="!nuovo">Abilita
+                                    <button class="button forward right" (click)="abilitaApp()"
+                                        *ngIf="!nuovo && !abilitato">Abilita
                                         app</button>
                                 </div>
                             </div>
