--- a/src/app/pages/patrimonio/patrimonio.page.html
+++ b/src/app/pages/patrimonio/patrimonio.page.html
@@ -33,22 +33,22 @@
                         <div class="scheda-row">
                             <div class="item">
                                 <h3 class="item-title">Abitazioni
-                                    <span>{{totalePatrimoniA == 0 ? '--' : totalePatrimoniA}}</span></h3>
+                                    <span>{{(totalePatrimoniA == 0 ? '--' : totalePatrimoniA + 'K')}}</span></h3>
                                 <ul class="item-list">
                                     <li *ngFor="let patrimonio of patrimoniA">
                                         <span class="badge patrimonio">{{patrimonio.numero_proprieta}}</span>
-                                        <span>{{patrimonio.codice_catastale}}</span><span>{{patrimonio.book_value}}</span>
+                                        <span>{{patrimonio.codice_catastale}}</span><span>{{patrimonio.book_value + 'K'}}</span>
                                     </li>
                                     <li *ngIf="patrimoniA.length == 0">--</li>
                                 </ul>
                             </div>
                             <div class="item">
                                 <h3 class="item-title">Commerciali
-                                    <span>{{totalePatrimoniC == 0 ? '--' : totalePatrimoniC}}</span></h3>
+                                    <span>{{(totalePatrimoniC == 0 ? '--' : totalePatrimoniC+ 'K')}}</span></h3>
                                 <ul class="item-list">
                                     <li *ngFor="let patrimonio of patrimoniC">
                                         <span class="badge patrimonio">{{patrimonio.numero_proprieta}}</span>
-                                        <span>{{patrimonio.codice_catastale}}</span><span>{{patrimonio.book_value}}</span>
+                                        <span>{{patrimonio.codice_catastale}}</span><span>{{patrimonio.book_value + 'K'}}</span>
                                     </li>
                                     <li *ngIf="patrimoniC.length == 0">--</li>
                                 </ul>
@@ -57,11 +57,11 @@
                         <div class="scheda-row">
                             <div class="item">
                                 <h3 class="item-title">Terreni
-                                    <span>{{totalePatrimoniT == 0 ? '--' : totalePatrimoniT}}</span></h3>
+                                    <span>{{(totalePatrimoniT == 0 ? '--' : totalePatrimoniT+ 'K')}}</span></h3>
                                 <ul class="item-list">
                                     <li *ngFor="let patrimonio of patrimoniT">
                                         <span class="badge patrimonio">{{patrimonio.numero_proprieta}}</span>
-                                        <span>{{patrimonio.codice_catastale}}</span><span>{{patrimonio.book_value}}</span>
+                                        <span>{{patrimonio.codice_catastale}}</span><span>{{patrimonio.book_value + 'K'}}</span>
                                     </li>
                                     <li *ngIf="patrimoniT.length == 0">--</li>
                                 </ul>
