Sistemate date sul wizard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
             <img src="/assets/img/readvice-logo@2x.png" class="title">
         </div>
         <div class="tools">
-            <div class="hints tasks"><span>10</span></div>
-            <div class="hints alerts"><span>10</span></div>
+            <!-- <div class="hints tasks"><span>10</span></div>
+            <div class="hints alerts"><span>10</span></div> -->
             <div class="user" (click)="goToProfiloUtente()">{{getUtenteEmail()}}</div>
             <div class="hints logout" (click)="logout()"></div>
         </div>
