--- a/src/global.scss
+++ b/src/global.scss
@@ -2152,3 +2152,15 @@ canvas {
     width:100% !important; 
     height:100% !important;
 }
+
+
+.igx-calendar__header {
+    background: #104D77 !important;
+    color: #fff !important;
+}
+
+.igx-button--flat {
+    background: transparent;
+    color: #104D77 !important;
+    border-radius: 4px;
+}
