correzione modale quote proprietà e errore iterazione tasse immobile

--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -132,7 +132,7 @@
     </div>
 </div>
 <app-quoteproprieta-modal id="custom-modal-1" class="modal-area">
-    <div class="scheda modal">
+    <div class="scheda modal-broker">
         <div class="scheda-content">
             <div class="scheda-table">
                 <div class="scheda-row">
