--- a/src/global.scss
+++ b/src/global.scss
@@ -2132,7 +2132,7 @@ input:checked + .slider:before {
     background-color: rgba(0,0,0,0.05)
 }
 
-.modal {
+.modal-broker {
     width: 400px;
     margin-left: -200px;
     top: 30%;
