--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -99,7 +99,7 @@
         <div class="list">
             <ul class="lista-immobile">
                 <li class="immobile" *ngFor="let immobileLista of sessionService.getImmobiliCliente()"
-                    (click)="apriSchedaImmobile(immobileLista.proprieta_id)">
+                    (click)="loadImmobile(immobileLista.proprieta_id)">
                     <div class="indirizzo">{{immobileLista.indirizzo}},
                         {{immobileLista.civico}}<br>{{immobileLista.cap}} {{immobileLista.citta}}
                         ({{immobileLista.provincia}})</div>
