--- a/src/global.scss
+++ b/src/global.scss
@@ -699,9 +699,38 @@ input:checked + .slider:before {
                     margin: 10px 60px;
                     padding: 20px 0;
                     font-size: .9em;
+                    position: relative;
+                    &:hover {
+                        color: #fff !important;
+                        text-decoration: none !important;
+                    }
                 }
                 .chosen {
-                    border: 3px solid red;
+                    box-shadow: 0 0 0 3px #fff, 0 0 5px 4px #f00;
+                    //border: 3px solid red;
+                    /*&:before {
+                        content: "";
+                        position: absolute;
+                        width: 20px;
+                        height: 20px;
+                        background: #f00;
+                        top: 50%;
+                        margin-top: -10px;
+                        left: -25px;
+                        border-radius: 50%;
+                    }
+                    &:after {
+                        content: "";
+                        position: absolute;
+                        width: 20px;
+                        height: 20px;
+                        background: #f00;
+                        top: 50%;
+                        margin-top: -10px;
+                        right: -25px;
+                        border-radius: 50%;
+                    }*/
+
                 }
             }
         }
@@ -995,7 +1024,7 @@ input:checked + .slider:before {
             }
             .list-title {
                 position: absolute;
-                top: $default-content-list-vertical-position - 20px;
+                top: $default-content-list-vertical-position - 22px;
                 left: 30px;
                 font-size: .9em;
                 color: $grey-default;
@@ -1789,16 +1818,17 @@ input:checked + .slider:before {
         }
     }
     .immobile {
-        padding: 20px 0 0 10px;
+        padding: 20px 0 20px 10px;
         border-bottom: solid 1px #ccc;
         position: relative;
-        height: 90px;
+        min-height: 90px;
         &.selected {
             background-color: $default-light-blue;
         }
         .indirizzo {
             font-size: .8em;
             padding-left: 20px;
+            padding-right:10px;
             background: url('/assets/img/icon-position@2x.png') no-repeat left top;
             margin-right: 60px;
         }
@@ -1809,10 +1839,13 @@ input:checked + .slider:before {
             text-align:center;
             border-left: solid 1px #ccc;
             right: 0;
+            margin-bottom: 0;
         }
         .tipologia {
             border-bottom: solid 1px #ccc;
             top: 0;
+            height: 45px;
+            //bottom: 50%;
             .magazzino {
                 background-repeat: no-repeat;
                 background-position: center;
@@ -1910,6 +1943,7 @@ input:checked + .slider:before {
             }
         }
         .quota {
+            top: 45px;/*50%*/;
             bottom: 0;
         }
     }
